weird safari clipping bug x 2

--- a/public/stylesheets/refinr5.css
+++ b/public/stylesheets/refinr5.css
@@ -33,7 +33,7 @@ h1#logo {
 h3.title {
   margin: 25px 0 0 0;
   padding: 0;
-  line-height: 1.0em;
+  line-height: 1.1em;
 }
 p.excerpt {
   margin: 0.5em 0 1.0em 0;
